@@ -1,0 +1,81 @@
+<!-- Imprimatur DTD.
+
+<!DOCTYPE imprimatur PUBLIC 
+    "-//Imprimatur DTD 003//EN"
+    "http://imprimatur.sourceforge.net/imprimatur-003.dtd">
+
+Script for testing web applications.
+
+-->
+
+<!--
+	The document root.
+ -->
+
+<!ELEMENT imprimatur (credentials?, (test-group | test | session | request)*)>
+	<!ATTLIST imprimatur name CDATA #IMPLIED>
+	<!ATTLIST imprimatur port CDATA "80">
+	<!ATTLIST imprimatur hostname CDATA "localhost">
+	
+<!--
+	Simply to group tests
+-->
+
+<!ELEMENT test-group (test | session | request)*>
+	<!ATTLIST test-group name CDATA #IMPLIED>
+	<!ATTLIST test-group port CDATA #IMPLIED>
+	<!ATTLIST test-group hostname CDATA #IMPLIED>
+	
+
+<!--
+	Holds a discrete test
+-->
+
+<!ELEMENT test (session | request)*>
+	<!ATTLIST test name CDATA #IMPLIED>
+	<!ATTLIST test port CDATA #IMPLIED>
+	<!ATTLIST test hostname CDATA #IMPLIED>
+
+<!--
+	Represents a browser session
+-->
+
+<!ELEMENT session (request*)>
+	<!ATTLIST session port CDATA #IMPLIED>
+	<!ATTLIST session hostname CDATA #IMPLIED>
+	<!ATTLIST session path CDATA #IMPLIED>
+
+<!--
+	Represents an HTTP request
+-->
+
+<!ELEMENT request (refresh | parameter | regex | response-code)*>
+	<!ATTLIST request port CDATA #IMPLIED>
+	<!ATTLIST request hostname CDATA #IMPLIED>
+	<!ATTLIST request path CDATA #IMPLIED>
+	<!ATTLIST request method (get|post) "get">
+	<!ATTLIST request enctype CDATA "application/x-www-form-urlencoded">
+	<!ATTLIST request wait-for-refreshes (true|false) "false">
+
+<!--
+	A regular expression to look for in an HTTP response
+-->
+
+<!ELEMENT refresh EMPTY>
+	<!ATTLIST refresh wait CDATA "2">
+	<!ATTLIST refresh max CDATA "10">
+
+<!--
+	A regular expression to look for in an HTTP response
+-->
+
+<!ELEMENT regex EMPTY>
+	<!ATTLIST regex pattern CDATA #REQUIRED>
+	
+<!--
+	Credentials for authentication
+-->
+
+<!ELEMENT credentials EMPTY>
+	<!ATTLIST credentials username CDATA #REQUIRED>
+	<!ATTLIST credentials password CDATA #REQUIRED>
